--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -203,7 +203,7 @@ democratic ,/adj./@民主的;
 denominate ,/v./@命名;
 denotation ,/n./@符号;,/n./@表示;,/n./@意义;
 department ,/n./@部@门;,/n./@系;
-deposition ,/n./@免職;,/n./@罷官;
+deposition ,/n./@免職;,/n./@罷官;,/n./@废黜;,/n./@证词;
 deprecated ,/v./@弃用;,/v./@不赞成;,/v./@不宜用;,/adj./@废弃的;,/adj./@弃用的;
 depression ,/n./@抑郁;,/n./@萧条;
 derogatory ,/adj./@贬低的;
@@ -319,6 +319,7 @@ illuminate ,/v./@照明;
 illuminati ,/n./@光照派;
 illustrate ,/v./@阐明;,/v./@图解;
 immaculate ,/adj./@完美的;
+immaterial ,/adj./@无关紧要的;,/adj./@无所谓的;,/adj./@不重要的;,/adj./@无形的;
 impeccable ,/adj./@無瑕疵的;
 impediment ,/n./@口吃;,/n./@妨碍;,/n./@阻止;
 imperative ,/adj./@必要的;,/adj./@命令的;,/adj./@祈使的;,/adj./@紧急的;,/n./@命令;,/n./@规则;
@@ -463,6 +464,7 @@ population ,/n./@人口;
 possession ,/n./@資產;,/n./@所有;
 precedence ,/n./@領先;
 prediction ,/n./@预言;
+preferable ,/adj./@更合适的;,/adj./@更好的;,/adj./@更可取的;
 presidency ,/n./@总统任期;
 privileged ,/adj./@荣幸的;
 procedural ,/adj./@过程式的;,/adj./@程序性的;
@@ -588,7 +590,7 @@ transition ,/n./@转变;,/n./@過渡;
 transitive ,/adj./@及物的;,/adj./@过渡的;,/n./@传递;,/n./@及物动词;
 translucid ,/adj./@半透明的;
 transplant ,/v./@移植;
-tremendous ,/adj./@极大的;
+tremendous ,/adj./@极大的;,/adj./@极好的;
 tumultuous ,/adj./@混乱的;,/adj./@骚乱的;,/adj./@嘈杂的;,/adj./@吵闹的;,/adj./@喧哗的;
 turbulence ,/n./@动荡;
 ultimately ,/adj./@终极的;
