--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -2,7 +2,7 @@ abstraction ,/n./@抽象;
 accommodate ,/v./@容纳;,/v./@使适应;,/v./@适应;,/v./@调节;
 accordingly ,/adv./@因此;
 acknowledge ,/v./@承认;
-acquisition ,/n./@获得物;,/n./@获得;
+acquisition ,/n./@获得;,/n./@获得物;,/n./@习得;,/n./@收购;
 affectation ,/n./@做作;
 affirmation ,/n./@肯定;,/n./@确定;,/n./@确认;
 affirmative ,/adj./@肯定的;
@@ -254,6 +254,7 @@ parentheses ,/n./@括號;,/n./@圓括號;
 participant ,/adj./@参与的;,/adj./@参与者;
 participate ,/v./@参与;
 partnership ,/n./@夥伴關係;,/n./@合夥;
+peculiarity ,/n./@特性;,/n./@奇怪;,/n./@怪异;,/n./@奇异;,/n./@古怪;,/n./@怪癖;,/n./@特点;,/n./@蹊跷;
 pedagogical ,/adj./@教育学的;,/adj./@教学法的;
 penetration ,/n./@渗透;
 performance ,/n./@演出;,/n./@執行;,/n./@性能;
@@ -274,7 +275,7 @@ preparation ,/n./@准备;
 preposition ,/n./@介词;
 prerogative ,/adj./@有特權的;
 presumption ,/n./@假定;,/n./@推定;,/n./@冒昧;
-pretentious ,/adj./@虛偽的;
+pretentious ,/adj./@虛偽的;,/adj./@做作的;,/adj./@自以為是的;,/adj./@自命不凡的;,/adj./@炫耀的;,/adj./@矯飾的;
 procurement ,/n./@取得;
 proficiency ,/n./@熟练;,/n./@精通;
 progression ,/n./@前進;,/n./@連續;
