--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -158,6 +158,7 @@ prostitution ,/n./@賣淫;
 protuberance ,/n./@隆起;,/n./@隆起物;,/n./@凸出物;,/n./@突出物;
 purification ,/n./@净化;,/n./@提純;
 questionable ,/adj./@可疑的;
+reassignment ,/n./@再分配;,/n./@再指派;,/n./@再指定;,/n./@重新分配;
 recognizable ,/adj./@可辨認的;,/adj./@可認出的;,/adj./@可承認的;
 recreational ,/adj./@消遣的;,/adj./@娛樂的;,/adj./@修養的;
 refrigerator ,/n./@冰箱;
