--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -69,7 +69,7 @@ inventiveness ,/n./@創造力;
 investigation ,/n./@调查;
 justification ,/n./@正当性;
 magnification ,/n./@放大;,/n./@放大率;
-manifestation ,/n./@表明;
+manifestation ,/n./@表明;,/n./@表现;,/n./@表现形式;
 Mediterranean ,/adj./@地中的;
 miscellaneous ,/adj./@混雜的;,/adj./@各種各樣的;
 misunderstood ,/v./@误解;,/v./@误会;
