--- a/Files/lang/ch/chinese17.csv
+++ b/Files/lang/ch/chinese17.csv
@@ -1,4 +1,5 @@
 conversationalist ,/n./@健谈的人;
+counterproductive ,/adj./@适得其反的;,/adj./@事与愿违的;,/adj./@产生相反效果的;,/adj./@产生相反作用的;
 industrialization ,/n./@工业化;
 interrelationship ,/n./@相互關係;,/n./@相互聯係;,/n./@相互關聯;
 radiobroadcasting ,/n./@無綫電廣播;
