--- a/Files/lang/ch/chinese3.csv
+++ b/Files/lang/ch/chinese3.csv
@@ -27,7 +27,7 @@ axe ,/n./@斧子;,/n./@裁减;,/n./@斧頭;
 bad ,/adj./@壞的;,/adj./@不好的;
 bag ,/n./@包;,/n./@袋;
 ban ,/v./@禁止;
-bar ,/n./@條;
+bar ,/n./@條;,/n./@长条;,/n./@吧台;,/n./@酒吧;,/n./@柵欄;,/n./@條紋;,/n./@围栏;,/vt./@阻擋;,/vt./@禁止;,/vt./@閂上;,/prep./@除了;
 bat ,/n./@蝙蝠;
 bay ,/n./@港;,/n./@津;,/n./@渡口;
 bed ,/n./@牀;
