--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -157,6 +157,7 @@ cope ,/vi./@處理;,/vi./@對付;,/n./@長袍;
 copy ,/v./@復制;
 cord ,/n./@細繩;,/n./@電綫;,/n./@束縛;
 core ,/n./@核;
+cork ,/n./@软木;,/n./@软木塞;
 corn ,/n./@谷物;,/n./@玉米;
 cost ,/v./@花費;
 cosy ,/adj./@舒適的;,/n./@溫杯罩;
@@ -392,7 +393,7 @@ hair ,/n./@頭发;
 hale ,/adj./@矍鑠的;,/v./@流出;,/adv./@完全;
 half ,/n./@一半;,/adj./@一半;
 hall ,/n./@大廳;
-halo ,/n./@光暈;,/n./@光環;
+halo ,/n./@光暈;,/n./@光環;,/n./@光轮;,/n./@荣光;
 halt ,/v./@停止;
 hand ,/n./@手;
 hang ,/v./@懸掛;
