--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -49,7 +49,7 @@ along ,/adv./@一起;,/prep./@沿著;
 aloof ,/adj./@冷淡的;
 alpha ,/n./@α;
 altar ,/n./@聖壇;
-alter ,/v./@改變;
+alter ,/v./@改變;,/vt./@更改;,/vt./@改動;
 amass ,/vt./@積聚;,/vt./@收集;
 amaze ,/v./@震驚;
 amber ,/n./@琥珀;,/adj./@琥珀色的;
@@ -1245,6 +1245,7 @@ vogue ,/n./@流行;,/n./@時尚;
 voice ,/n./@聲音;
 vomit ,/vt./@嘔吐;,/v./@吐出;
 voter ,/n./@投票人;,/n./@選舉人;
+vouch ,/vt./@担保;,/vt./@保证;,/vt./@证明;
 vowel ,/n./@元音;
 wagon ,/n./@貨車;
 wanna ,/v./@想要;
@@ -1289,7 +1290,7 @@ would ,/aux./<will的過去式>@會;
 wound ,/v./@使受傷;,/n./@傷口;
 wrath ,/n./@憤怒;
 wreak ,/v./@發洩;,/v./@報仇;
-wreck ,/v./@破壞;
+wreck ,/v./@破壞;,/n./@失事;,/n./@殘骸;,/n./@沉船;,/n./@废人;,/vt./@毀壞;,/vt./@毁掉;
 wring ,/v./@擰;,/v./@絞;
 wrist ,/n./@手腕;
 write ,/v./@寫;
