--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -221,7 +221,7 @@ carpet ,/n./@地毯;
 carrot ,/n./@胡蘿蔔;
 carton ,/n./@紙箱;
 castle ,/n./@城堡;
-casual ,/adj./@隨便的;
+casual ,/adj./@隨便的;,/adj./@偶然的;,/adj./@随意的;,/adj./@粗略的;,/adj./@漫不经心的;,/adj./@轻松的;,/n./@临时工;,/adj./@临时的;
 cattle ,/n./@牛;
 caveat ,/n./@警告;,/n./@告誡;
 cavern ,/n./@洞穴;,/v./@挖空;
@@ -321,7 +321,7 @@ crisis ,/n./@危機;
 crotch ,/n./@胯部;,/n./@分叉;
 crouch ,/v./@蹲;,/v./@蜷伏;
 crunch ,/v./@咬碎;,/v./@壓碎;
-crutch ,/n./@拐杖;
+crutch ,/n./@拐杖;,/n./@腋杖;,/n./@支撑物;
 cuboid ,/n./@立方體;
 cuddle ,/v./@擁抱;
 curate ,/v./@摘選;
@@ -442,6 +442,7 @@ endure ,/v./@容忍;,/v./@忍耐;
 energy ,/n./@能量;
 engage ,/v./@使從事;,/v./@吸引;,/v./@佔用;
 engine ,/n./@引擎;,/n./@发動機;
+engulf ,/vt./@吞没;,/vt./@淹没;,/vt./@吞噬;
 enigma ,/n./@謎;,/n./@不可思議的事物;
 enough ,/adj./@足夠的;,/adj./@充足的;,/adv./@足够地;,/adv./@相当;,/adv./@很;,/pron./@足够;,/pron./@太多;,/adj./@太多的;
 enrage ,/v./@激怒;
@@ -683,7 +684,7 @@ insult ,/v./@侮辱;
 insure ,/v./@確保;
 intact ,/adj./@完整的;
 intend ,/v./@打算;
-intent ,/n./@意圖;,/n./@含義;,/adj./@專心的;
+intent ,/n./@意圖;,/n./@含義;,/adj./@專心的;,/n./@故意;,/adj./@专心致志的;,/adj./@下定决心的;
 intern ,/n./@實習生;
 intuit ,/v./@由直覺知道;
 invade ,/v./@侵略;
@@ -741,7 +742,7 @@ liable ,/adj./@有責任的;
 lichen ,/n./@地衣;,/n./@青苔;
 likely ,/adj./@有可能的;
 linear ,/adj./@線性的;,/adj./@線狀的;
-linger ,/v./@徘徊;,/v./@逗留;,/v./@拖延;
+linger ,/v./@徘徊;,/v./@逗留;,/v./@拖延;,/vi./@留存;
 lining ,/n./@夾裡;,/n./@襯裡;
 liquid ,/adj./@液態的;
 liquor ,/n./@酒;
@@ -918,6 +919,7 @@ pastry ,/n./@酥皮糕點;
 patent ,/n./@專利;,/adj./@明顯的;
 patrol ,/n./@巡邏;,/n./@巡邏隊;,/n./@偵察隊;,/vi./@巡逻;
 patron ,/n./@贊助人;,/n./@主顧;
+payoff ,/n./@贿赂;,/n./@遣散金;,/n./@收益;,/n./@回报;,/n./@结果;
 peanut ,/n./@花生;
 pebble ,/n./@卵石;
 peddle ,/vt./@兜售;,/vt./@宣传;,/vt./@非法贩卖;,/vt./@散播;
@@ -992,6 +994,7 @@ pursue ,/v./@追求;
 putrid ,/adj./@腐臭的;,/adj./@腐爛的;
 puzzle ,/v./@使困惑;,/n./@謎;
 quadra ,/adj.//pref./@四的;
+quaint ,/adj./@古色古香的;,/adj./@老式的;,/adj./@老派的;
 quartz ,/n./@石英;
 quaver ,/v./@顫抖;
 quench ,/v./@熄滅;
@@ -1214,6 +1217,7 @@ sonnet ,/n./@十四行詩;
 sooner ,/adv./@更快;
 sordid ,/adj./@骯髒的;,/adj./@卑鄙的;,/adj./@暗淡的;
 sorrow ,/n./@悲傷;
+sortie ,/n./@出击;,/n./@军事突袭;,/n./@外出;,/n./@出动架次;
 source ,/n./@源頭;
 soviet ,/n./@蘇維埃;
 sparse ,/adj./@稀疏的;,/adj./@稀少的;
@@ -1266,7 +1270,7 @@ strict ,/adj./@嚴格的;
 stride ,/n./@大步;,/v./@大步走;
 strike ,/v./@罷工;,/v./@襲擊;,/v./@突然想到;,/n./@袭击;,/vt./@打;
 string ,/n./@綫;,/n./@繩;,/n./@串;
-stripe ,/n./@條紋;
+stripe ,/n./@條紋;,/n./@臂章;,/n./@军衔;,/n./@軍階條;,/n./@斑紋;,/n./@类型;
 strive ,/v./@努力;,/v./@力求;
 stroke ,/n./@中風;,/v./@擊;,/v./@敲;,/v./@撫摸;,/n./@壁畫;,/v./@劃槳;
 strong ,/adj./@強的;
@@ -1281,6 +1285,7 @@ suburb ,/n./@郊區;
 subway ,/n./@地鐵;
 suffer ,/v./@遭受;
 suffix ,/n./@后綴;
+sullen ,/adj./@阴沉的;,/adj./@郁郁寡欢的;,/adj./@闷闷不乐的;
 summer ,/n./@夏;
 summon ,/v./@召喚;,/v./@召集;
 Sunday ,/n./@星期天;
@@ -1335,7 +1340,7 @@ thrive ,/v./@興旺;
 throat ,/n./@喉嚨;
 throne ,/n./@王座;
 thrust ,/v./@推;,/v./@刺;
-thwart ,/vt./@挫敗;
+thwart ,/vt./@挫敗;,/vt./@阻挠;
 ticket ,/n./@票;,/n./@標籤;,/n./@單;
 tiddly ,/adj./@很小的;
 timber ,/n./@木材;
