--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -169,12 +169,13 @@ bustard ,/n./@大鴇;
 butcher ,/n./@屠夫;
 buttock ,/n./@半邊臀部;
 cabbage ,/n./@捲心菜;,/n./@圓白菜;
-cabinet ,/n./@內閣;,/n./@壁櫥;
+cabinet ,/n./@內閣;,/n./@壁櫥;,/n./@座舱;,/n./@柜;
 calcium ,/n./@钙;
 canvass ,/vt./@征求;,/vt./@兜售;,/vt./@拉选票;
 capable ,/adj./@潛在的;,/adj./@可能的;
 capella ,/n./@教堂;
 capital ,/n./@首都;,/n./@資本;,/adj./@死刑的;
+capsule ,/n./@胶囊;,/n./@航天舱;,/n./@瓶封;
 captain ,/n./@船長;
 caption ,/n./@標題;
 capture ,/v./@俘獲;,/v./@捕獲;
@@ -297,6 +298,7 @@ corrupt ,/v./@腐化;,/v./@使腐化;
 costume ,/n./@服裝;
 cottage ,/n./@小屋;,/n./@村舍;
 counsel ,/v./@建議;,/v./@商討;,/v./@勸告;,/n./@顧問;,/v./@商議;
+counter ,/vt./@反击;,/n./@柜台;,/n./@专柜;,/n./@筹码;,/n./@计数器;
 country ,/n./@國家;
 coupler ,/n./@耦合器;,/n./@连接器;,/n./@车钩;,/n./@联键音栓;
 courage ,/n./@勇氣;
@@ -365,6 +367,7 @@ destine ,/v./@註定;,/v./@預定;
 destiny ,/n./@命運;,/n./@天意;,/n./@定數;
 destroy ,/v./@摧毀;
 develop ,/v./@发展;
+deviate ,/vi./@偏离;,/vi./@背离;
 diagram ,/n./@圖表;
 dialect ,/n./@方言;
 dialogo ,/n./@對話;
@@ -522,7 +525,7 @@ founder ,/n./@創辦人;,/n./@奠基人;
 fragile ,/adj./@易碎的;,/adj./@脆的;
 frailty ,/n./@虛弱;
 freedom ,/n./@自由;
-freight ,/n./@貨運;,/n./@貨物;,/n./@運費;
+freight ,/n./@貨運;,/n./@貨物;,/n./@運費;,/vt./@以货运运输;
 friable ,/adj./@易碎的;
 frigate ,/n./@護衛艦;,/n./@巡防艦;
 fucking ,/adv./@他媽的;
@@ -604,8 +607,8 @@ hyaline ,/adj./@透明的;,/n./@藍天;,/n./@鏡似的海;
 hygiene ,/n./@衛生;
 iceberg ,/n./@冰山;
 idyllic ,/adj./@田園詩的;,/adj./@悠閑的;,/adj./@牧歌的;
-illegal ,/adj./@非法的;
-illicit ,/adj./@違法的;,/adj./@不正當的;
+illegal ,/adj./@非法的;,/adj./@违法的;
+illicit ,/adj./@違法的;,/adj./@不正當的;,/adj./@违禁的;,/adj./@非法的;
 imagine ,/v./@想象;
 imitate ,/v./@模仿;
 immerse ,/v./@沉浸于;,/vt./@浸泡;
@@ -1273,7 +1276,7 @@ visitor ,/n./@來訪者;
 vitiate ,/v./@削弱;,/v./@損害;,/v./@降低;,/v./@墮落;
 volcano ,/n./@火山;
 voltage ,/n./@電壓;
-voucher ,/n./@代金券;
+voucher ,/n./@代金券;,/n./@票券;,/n./@收据;,/n./@凭证;
 vulgate ,/adj./@通行的;,/adj./@公認的;,/adj./@拉丁文聖經的;
 vulture ,/n./@禿鷹;,/n./@禿鷲;,/n./@貪婪的人;
 warlock ,/n./@術士;,/n./@巫師;,/n./@魔術師;
