--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -102,7 +102,7 @@ attendee ,/n./@出席者;
 attitude ,/n./@态度;,/n./@看法;
 attorney ,/n./@律师;,/n./@代理人;
 audience ,/n./@听众;
-audition ,/n./@試音;,/v.//n./@試聽;,/n./@聽力;,/n./@聽覺;,/v.//n./@試唱;,/v./@面試;
+audition ,/n./@試音;,/v.//n./@試聽;,/n./@聽力;,/n./@聽覺;,/v.//n./@試唱;,/v./@面試;,/n./@试演;,/vi./@试演;
 autonomy ,/n./@自治;
 auxilian ,/n./@辅助人员;
 aversion ,/n./@非常討厭;
@@ -143,6 +143,7 @@ building ,/n./@建筑;
 burglary ,/n./@盗窃;
 business ,/n./@事務;,/n./@買賣;,/n./@行業;,/n./@商業;,/n./@商號;
 calamity ,/n./@災難;
+calculus ,/n./@微积分;
 calendar ,/n./@日历;
 calmness ,/n./@平靜;
 campaign ,/n./@戰役;,/n./@運動;
@@ -158,7 +159,7 @@ carousel ,/n./@旋转木马;
 carriage ,/n./@运输;,/n./@四轮马车;,/n./@车厢;
 cashmere ,/n./@羊絨;
 casually ,/adj./@随便的;
-casualty ,/n./@傷亡;
+casualty ,/n./@傷亡;,/n./@伤亡人员;,/n./@受害者;,/n./@急诊室;
 catalyst ,/n./@催化剂;,/n./@触媒;,/n./@接触剂;,/n./@催化剂触媒;
 category ,/n./@种类;
 catholic ,/adj./@天主教的;
@@ -527,6 +528,7 @@ ideology ,/n./@意識形態;,/n./@思想意識;,/n./@觀念學;
 idolatry ,/n./@偶像崇拜;
 ignorant ,/adj./@愚昧的;
 illusion ,/n./@幻觉;
+imminent ,/adj./@迫近的;,/adj./@临近的;,/adj./@迫在眉睫的;,/adj./@即将来临的;,/adj./@即将发生的;,/adj./@即将作出的;
 immmerse ,/n./@沉浸;
 immortal ,/adj./@不死的;,/adj./@永生的;
 immunity ,/n./@免疫力;,/n./@豁免權;
@@ -953,7 +955,7 @@ splendor ,/n./@光彩;,/n./@壯麗;
 sporadic ,/adj./@零星的;,/adj./@分散的;,/adj./@偶發的;
 sprinkle ,/vt./@洒;,/vt./@撒;,/n./@少量;
 spurious ,/adj./@假的;
-squander ,/v./@浪費;
+squander ,/v./@浪費;,/vt./@挥霍;
 stallion ,/n./@種馬;,/n./@成年公馬;
 stampede ,/n./@驚跑;,/v./@驚逃;
 standard ,/n./@标准;,/adj./@标准的;
@@ -996,7 +998,9 @@ symbolic ,/adj./@象征性的;
 symmetry ,/n./@對稱;
 sympathy ,/n./@同情;
 symphony ,/n./@交响乐;
+synaptic ,/adj./@突触的;
 synonymy ,/n./@同義;
+synoptic ,/adj./@概要的;,/adj./@提要的;
 tactical ,/adj./@战术上的;,/adj./@战术的;,/adj./@有谋略的;,/adj./@短程的;
 tangible ,/adj./@有形的;,/adj./@切实的;
 taxation ,/n./@税务;,/n./@税;
@@ -1009,13 +1013,14 @@ tendency ,/n./@趋势;
 terminal ,/n./@终端;,/n./@终点;
 terrible ,/adj./@可怕的;
 terrific ,/adj./@极大的;
+tertiary ,/adj./@第三的;,/adj./@第三纪的;,/adj./@第三系的;,/adj./@第三产业的;,/adj./@高等教育的;
 testator ,/n./@立遺囑者;
 thesauri ,/n./@主題詞表;,/n./@同義詞詞典;,/n./@同反義詞詞典;
 thinking ,/v./@想;,/n./@思想;
 thirteen ,/n./@十三;
 thousand ,/n./@千;
 threaten ,/v./@恐吓;
-thriller ,/n./@惊悚片;,/n./@惊險小說;
+thriller ,/n./@惊悚片;,/n./@惊險小說;,/n./@惊险电影;
 throttle ,/v./@扼殺;,/v./@節流;,/v./@壓制;,/v./@窒息;,/v./@限速;,/n./@風門;,/n./@喉嚨;,/n./@節流閥;
 thruster ,/n./@推進器;
 Thursday ,/n./@星期四;
@@ -1049,6 +1054,7 @@ unfetter ,/v./@釋放;,/v./@解放;,/v./@掙脫;
 universe ,/n./@宇宙;
 unsavory ,/adj./@難喫的;,/adj./@沒有香味的;
 unsecure ,/adj./@不安全的;,/adj./@未加密的;
+unsettle ,/vt./@扰乱;,/vt./@驚擾;
 uprising ,/n./@起义;
 urbanity ,/n./@雅致;,/n./@都市風格;,/n./@禮貌;
 vacation ,/n./@假期;
