--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -21,7 +21,7 @@ adversary ,/n./@敵手;
 advertise ,/v./@做广告;
 aeroplane ,/n./@飛機;
 aesthetic ,/adj./@美学的;
-affiliate ,/v./联号;,/v./使@附属;,/v./@参加;
+affiliate ,/v./联号;,/v./使@附属;,/v./@参加;,/n./@附属机构;,/vi./@并入;,/vi./@加入;
 afternoon ,/n./@下午;
 afterward ,/adv./@後來;,/adv./@之後;
 aggravate ,/v./@加重;,/v./@惡化;
@@ -156,6 +156,7 @@ chocolate ,/n./@巧克力;
 chopstick ,/n./@筷子;
 Christian ,/n./@基督徒;
 cigarette ,/n./@香烟;
+circuitry ,/n./@电路;,/n./@电路系统;,/n./@电路装置;,/n./@电路元件;
 circulate ,/v./@循环;
 classical ,/adj./@經典的;,/adj./@古典的;
 classmate ,/n./@同学;
@@ -202,6 +203,7 @@ contender ,/n./@竞争者;,/n./@争夺者;
 contented ,/adj./@满足的;
 continent ,/n./@大陸;,/adj./@節制的;
 continual ,/adj./@不间断的;,/adj./@连续的;
+continuum ,/n./@連續體;,/n./@漸變體;
 conundrum ,/n./@难题;,/n./@谜语;
 convivial ,/adj./@欢乐的;,/adj./@欢宴的;
 copyright ,/n./@版权;
@@ -433,6 +435,7 @@ honeycomb ,/n./@蜂巢;
 hostility ,/n./@敵意;,/n./@敵對;
 humiliate ,/v./@羞辱;
 hurricane ,/n./@颶風;
+hydraulic ,/adj./@水力的;,/adj./@液压的;
 hypnotize ,/v./@吸引;
 hypocrisy ,/n./@虛僞;,/n./@僞善;
 identical ,/adj./@相同的;
@@ -539,6 +542,7 @@ matriarch ,/n./@女统治者;,/n./@女家长;
 matricide ,/n./@弑母;
 matrimony ,/n./@結婚;,/n./@婚禮;,/n./@婚姻;
 meanwhile ,/adv./@同时;
+mechanics ,/n./@力学;,/n./@机械学;
 mechanism ,/n./@机制;
 menstrual ,/adj./@月经的;
 mesmerize ,/v./@吸引;
@@ -595,6 +599,7 @@ palanquin ,/n./@轎子;,/n./@肩輿;
 palatable ,/adj./@美味的;,/adj./@可口的;
 panoramic ,/adj./@全景的;,/adj./@概括的;
 pansexual ,/adj./@泛性的;
+parabolic ,/adj./@抛物线的;
 parachute ,/n./@降落傘;
 paragraph ,/n./@段落;,/n./@節;
 parameter ,/n./@參數;,/n./@參量;
@@ -661,7 +666,7 @@ prejudice ,/n./@偏见;
 prescribe ,/v./@指定;,/v./@开@药;,/v./@采用;
 president ,/n./@总统;
 primitive ,/adj./@原始的;
-principal ,/n./@校長;,/adj./@主要的;,/adj./@首要的;
+principal ,/n./@校長;,/adj./@主要的;,/adj./@首要的;,/adj./@主角;,/adj./@最重要的;,/n./@本金;
 principle ,/n./@原理;
 privilege ,/n./@特權;
 proactive ,/adj./@前瞻性的;
@@ -692,6 +697,7 @@ quarterly ,/n./@季刊;
 quintuple ,/adj./@五倍的;
 quotation ,/n./@引用;
 radiation ,/n./@輻射;,/n./@放射;
+rationale ,/n./@根本原因;,/n./@逻辑依据;
 realistic ,/adj./@逼真的;,/adj./@实际的;
 rebellion ,/n./@反叛;,/n./@叛乱;
 reception ,/n./@接待;,/n./@招待;
@@ -792,6 +798,7 @@ sprightly ,/adv./@活潑地;,/adj./@活潑的;,/adj./@愉快的;
 stability ,/n./@穩定性;
 stalemate ,/n./@僵局;,/n./@困境;
 statement ,/n./@聲明;,/n./@陳述;,/n./@口供;
+stateside ,/adj./@在美国的;,/adv./@在美国;,/adv./@向美国;
 statistic ,/n./@资料;,/n./@统计数据;
 statutory ,/adj./@法定的;,/adj./@规定的;,/adj./@成文的;,/adj./@成文法的;
 sterilize ,/v./@消毒;,/v./@滅菌;
@@ -822,7 +829,7 @@ telephone ,/n./@电话;
 telescope ,/n./@望远镜;
 temporary ,/adj./@临时的;
 tentative ,/adj./@試探性的;
-terminate ,/v./使@终止;,/v./@结束;
+terminate ,/vt./@终止;,/vt./@结束;,/vt./@停止;,/vt./@解雇;
 territory ,/n./@领地;
 tesseract ,/n./@四次元立方體;
 theocracy ,/n./@神權政體;
@@ -874,6 +881,7 @@ visionary ,/adj./@梦想的;,/n./@空想家;
 visualize ,/v./@可视化;
 voiceless ,/adj./@無聲的;
 volunteer ,/n./@志愿者;
+vouchsafe ,/vt./@给予;,/vt./@惠赐;,/vt./@承诺;,/vt./@透露;
 vulgarian ,/n./@俗人;
 vulgarity ,/n./@粗俗;,/n./@粗俗语;,/n./@粗野动作;
 warranted ,/adj./@擔保的;
