--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -319,6 +319,7 @@ illuminate
 illuminati
 illustrate
 immaculate
+immaterial
 impeccable
 impediment
 imperative
@@ -463,6 +464,7 @@ population
 possession
 precedence
 prediction
+preferable
 presidency
 privileged
 procedural
