--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -442,6 +442,7 @@ endure
 energy
 engage
 engine
+engulf
 enigma
 enough
 enrage
@@ -918,6 +919,7 @@ pastry
 patent
 patrol
 patron
+payoff
 peanut
 pebble
 peddle
@@ -992,6 +994,7 @@ pursue
 putrid
 puzzle
 quadra
+quaint
 quartz
 quaver
 quench
@@ -1214,6 +1217,7 @@ sonnet
 sooner
 sordid
 sorrow
+sortie
 source
 soviet
 sparse
@@ -1281,6 +1285,7 @@ suburb
 subway
 suffer
 suffix
+sullen
 summer
 summon
 Sunday
