--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -175,6 +175,7 @@ canvass
 capable
 capella
 capital
+capsule
 captain
 caption
 capture
@@ -297,6 +298,7 @@ corrupt
 costume
 cottage
 counsel
+counter
 country
 coupler
 courage
@@ -365,6 +367,7 @@ destine
 destiny
 destroy
 develop
+deviate
 diagram
 dialect
 dialogo
