--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -143,6 +143,7 @@ building
 burglary
 business
 calamity
+calculus
 calendar
 calmness
 campaign
@@ -527,6 +528,7 @@ ideology
 idolatry
 ignorant
 illusion
+imminent
 immmerse
 immortal
 immunity
@@ -996,7 +998,9 @@ symbolic
 symmetry
 sympathy
 symphony
+synaptic
 synonymy
+synoptic
 tactical
 tangible
 taxation
@@ -1009,6 +1013,7 @@ tendency
 terminal
 terrible
 terrific
+tertiary
 testator
 thesauri
 thinking
@@ -1049,6 +1054,7 @@ unfetter
 universe
 unsavory
 unsecure
+unsettle
 uprising
 urbanity
 vacation
