--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -156,6 +156,7 @@ chocolate
 chopstick
 Christian
 cigarette
+circuitry
 circulate
 classical
 classmate
@@ -202,6 +203,7 @@ contender
 contented
 continent
 continual
+continuum
 conundrum
 convivial
 copyright
@@ -433,6 +435,7 @@ honeycomb
 hostility
 humiliate
 hurricane
+hydraulic
 hypnotize
 hypocrisy
 identical
@@ -539,6 +542,7 @@ matriarch
 matricide
 matrimony
 meanwhile
+mechanics
 mechanism
 menstrual
 mesmerize
@@ -595,6 +599,7 @@ palanquin
 palatable
 panoramic
 pansexual
+parabolic
 parachute
 paragraph
 parameter
@@ -692,6 +697,7 @@ quarterly
 quintuple
 quotation
 radiation
+rationale
 realistic
 rebellion
 reception
@@ -792,6 +798,7 @@ sprightly
 stability
 stalemate
 statement
+stateside
 statistic
 statutory
 sterilize
@@ -874,6 +881,7 @@ visionary
 visualize
 voiceless
 volunteer
+vouchsafe
 vulgarian
 vulgarity
 warranted
