--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -369,7 +369,7 @@ gold ,/n./@金;
 golf ,/n./@髙爾夫;
 gone ,/v./@離去;
 good ,/adj./@好的;,/adj./@善良的;
-goof ,/n./@呆瓜;,/v./@打发時間;
+goof ,/n./@傻瓜;,/n./@愚蠢的错误;,/v./@搞錯;,/v./@弄错;,/vi./@犯愚蠢的错误;,/n./@呆子;,/vi./@打發時間;
 goon ,/n./@呆子;
 goth ,/n./@野蠻人;,/n./@哥特人;
 gown ,/n./@長袍;
