--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -166,7 +166,7 @@ contagious ,/adj./@感染性的;,/adj./@蔓延的;
 contestant ,/n./@竞争者;,/n./@竞赛者;,/n./@争论者;
 contiguous ,/adj./@連續的;,/adj./@鄰近的;
 contingent ,/adj./@偶然的;,/adj./@或有的;,/n./@分遣隊;
-continuity ,/n./@连续性;
+continuity ,/n./@连续性;,/n./@連貫性;,/n./@持續性;,/n./@銜接;,/n./@節目串聯;,/n./@場景串聯;
 continuous ,/adj./@连续不断的;
 contraband ,/adj./@走私;,/n./@走私;
 contradict ,/v./@反駁;,/v./@矛盾;
