--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -11,6 +11,7 @@ agriculture ,/n./@农业;
 altercation ,/n./@爭執;,/n./@鬥毆;,/n./@争吵;
 alternative ,/adj./@选择性的;,/adj./@替代性的;
 amphetamine ,/n./@安非他明;
+anachronism ,/n./@時代錯誤;,/n./@年代誤植;,/n./@不合時宜;,/n./@不合時代的產物;,/n./@不合時代的人;
 analyzation ,/n./@分析;
 anticipated ,/adj./@预期的;
 apocalyptic ,/adj./@預言的;
