--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -900,7 +900,7 @@ some ,/adj./@一些;
 song ,/n./@歌;
 soon ,/adv./@快;,/adv./@不就;
 sore ,/adj./@疼痛的;,/adj./@刺痛的;
-sort ,/n./@種類;,/v./@分@类;
+sort ,/n./@種類;,/vt./@分类;,/vt./@挑选;,/vt./@修理;
 soul ,/n./@靈魂;
 soup ,/n./@湯;
 spam ,/n./@罐頭豬肉;,/n./@垃圾郵件;
