--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -480,7 +480,7 @@ extract ,/v./@提取;,/v./@摘錄;
 extreme ,/adj./@極度的;,/n./@極端;
 faction ,/n./@派別;,/n./@小集團;,/n./@内訌;
 factory ,/n./@工廠;
-factual ,/adj./@事實的;
+factual ,/adj./@事實的;,/adj./@事实性的;,/adj./@如實的;,/adj./@真實的;
 faculty ,/n./@官能;,/n./@本領;,/n./@學係;
 failure ,/n./@失敗;
 fantasy ,/n./@幻想;
@@ -1006,7 +1006,7 @@ restful ,/adj./@閑適的;
 restore ,/v./@恢復;
 retired ,/adj./@退休的;
 retract ,/v./@縮囘;
-reunion ,/n.v./@聯合;
+reunion ,/n.v./@聯合;,/n./@重聚;,/n./@团聚;
 reunite ,/v./@再聯合;,/v./@重聚;
 revenge ,/v.//n./@報復;,/v.//n./@復仇;
 revenue ,/n./@稅;
@@ -1111,6 +1111,7 @@ sponsor ,/n./@贊助;,/n./@贊助者;
 spousal ,/adj./@配偶的;,/adj./@与配偶有关的;
 squalid ,/adj./@骯髒的;,/adj./@汙穢的;,/adj./@卑劣的;
 squeeze ,/v./@擠榨;
+stadium ,/n./@體育場;,/n./@運動場;
 staffer ,/n./@職員;,/n./@工作人員;
 stagger ,/v./@蹣跚;
 stalker ,/n./@跟踪者;
@@ -1208,7 +1209,7 @@ tremble ,/v./@顫抖;
 tribune ,/n./@保民官;
 tribute ,/n./@頌詞;,/n./@獻禮;,/n./@贡品;
 trickle ,/v./@滴下;
-trigger ,/n./@扳機;
+trigger ,/n./@扳機;,/vt./@觸發;,/vt./@引發;,/n./@誘因;,/n./@触发器;,/vt./@引起;
 trinity ,/n./@三位一體;,/n./@三倍;
 triumph ,/n./@勝利;,/n./@凱旋;
 trivial ,/adj./@瑣碎的;
