--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -563,6 +563,7 @@ integral ,/adj./@組成的;,/adj./@整體的;
 intently ,/adv./@專心地;
 interact ,/v./@相互作用;
 interest ,/n./@利益;,/n./@兴趣;
+interior ,/n./@内部;,/n./@内政;,/n./@内景;,/n./@内地;,/adj./@内部的;,/adj./@内景的;,/adj./@内地的;,/adj./@内心的;,/adj./@室内的;
 internal ,/adj./@內部的;,/adj./@國內的;
 internet ,/n./@互联网;
 interval ,/n./@間隔;,/n./@中間休息;
@@ -959,7 +960,7 @@ squander ,/v./@浪費;,/vt./@挥霍;
 stallion ,/n./@種馬;,/n./@成年公馬;
 stampede ,/n./@驚跑;,/v./@驚逃;
 standard ,/n./@标准;,/adj./@标准的;
-standoff ,/n./@僵持;,/n./@均衡;
+standoff ,/n./@僵持;,/n./@均衡;,/n./@僵局;
 starfish ,/n./@海星;
 starving ,/adj./@饥饿的;
 stealthy ,/adj./@秘密的;,/adj./@偷偷摸摸的;,/adj./@鬼鬼祟祟的;
