--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -195,7 +195,7 @@ cater ,/v./@迎合;,/v./@投合;
 cause ,/v./@導致;
 cavil ,/vi./@挑剔;,/vi./@吹毛求疵;
 cease ,/v./@停止;
-chain ,/n./@鎖鏈;
+chain ,/n./@鎖鏈;,/n./@链条;,/n./@束缚;,/vt./@用链条拴住;
 chair ,/n./@椅子;
 chalk ,/n./@粉筆;
 chant ,/n./@聖歌;,/n./@贊美詩;,/v./@唱;,/v./@詠唱;
