--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -592,6 +592,7 @@ outermost ,/adj./@最外的;
 outskirts ,/n./@市郊;,/n./@边缘;,/n./@郊区;
 oversight ,/n./@监督;,/n./@照管;,/n./@疏忽;
 overthrew ,/v./@推翻;
+overwatch ,/n./@掩護;,/vt./@掩護;,/n./@保護;,/n./@監視;,/n./@照顧;
 overwhelm ,/v./@征服;
 overwrite ,/v./@覆盖;
 ownership ,/n./@所有权;
