--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -109,6 +109,7 @@ chivalrous ,/adj./@俠義的;
 chromosome ,/n./@染色体;
 circumcise ,/v./@割除包皮;,/v./@割除陰蒂;
 circumvent ,/v./@包圍;,/v./@繞行;
+collateral ,/adj./@附带的;,/adj./@有担保的;,/n./@抵押的;,/n./@抵押物;
 collecting ,/n./@收集;
 collection ,/n./@收集;
 collective ,/n./@集體;,/adj./@集體的;
