--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -754,7 +754,7 @@ mulatto ,/n./@黑白混血兒;
 mundane ,/adj./@平凡的;,/adj./@世俗的;,/adj./@乏味的;
 musical ,/adj./@音樂的;,/n./@歌舞片;
 mustard ,/n./@芥末;
-mystery ,/n./@謎;
+mystery ,/n./@謎;,/n./@神秘;,/adj./@神秘的;,/n./@悬疑;
 naphtha ,/n./@石腦油;,/n./@揮發油;,/n./@粗汽油;
 natural ,/adj./@自然的;
 naughty ,/adj./@淘氣的;
