--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -495,6 +495,7 @@ handsome ,/adj./@帅气的;
 headache ,/n./@头痛;
 headline ,/n./@头条;
 hedgehog ,/n./@刺猬;
+henchman ,/n./@亲信;,/n./@黨羽;,/n./@爪牙;,/n./@幫兇;,/n./@侍从;
 heraldry ,/n./@纹章学;,/n./@盛典;
 heritage ,/n./@遗产;,/n./@传统;
 hesitant ,/adj./@猶豫的;
