--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -1061,7 +1061,7 @@ stage ,/n./@舞臺;,/n./@階段;
 stain ,/n./@汙點;
 stake ,/n./@柱;,/n./@賭註;,/n./@樁;
 stale ,/adj./@陳舊的;
-stall ,/v./@拖延;,/n./@貨攤;,/n./@畜欄;,/n./@馬廄;
+stall ,/v./@拖延;,/n./@貨攤;,/n./@畜欄;,/n./@馬廄;,/n./@小隔间;,/n./@失速;,/n./@熄火;,/n./@车位;,/v./@熄火;,/v./@失速;
 stamp ,/n./@郵票;
 stand ,/v./@站立;,/v./@忍受;,/v./@坐落;
 stare ,/v./@盯;
