--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -629,6 +629,7 @@ here's ,/n.v./@這是;
 hereby ,/adv./@以此;
 heresy ,/n./@異端;,/n./@邪教;
 hermit ,/n./@隱士;
+heroic ,/adj./@英勇的;,/adj./@英雄的;,/adj./@坚决的;,/adj./@史诗的;
 higher ,/adj./@更高的;
 highly ,/adv./@髙度的;,/adv./@很髙的;
 hijack ,/n.//v./@搶劫;,/n.//v./@劫持;,/v.//n./@威逼;,/v.//n./@敲詐;
