--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -1231,7 +1231,7 @@ uniform ,/n./@制服;,/adj./@全部相同的;
 unknown ,/adj./@未知的;,/adj./@陌生的;,/n./@未知;,/n./@未知物;,/n./@未知數;
 unleash ,/v./@解放;
 unlucky ,/adj./@不幸的;
-upfront ,/adj./@預付的;,/adj./@在前面的;,/adj./@正直的;,/adj./@坦率的;
+upfront ,/adj./@預付的;,/adj./@在前面的;,/adj./@正直的;,/adj./@坦率的;,/adj./@显要的;
 upright ,/adj./@正直的;
 urgency ,/n./@緊急;,/n./@緊急事件;
 useless ,/adj./@無用的;
