--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -676,7 +676,7 @@ processor ,/n./@處理器;
 profanity ,/n./@褻瀆;
 professor ,/n./@教授;
 projector ,/n./@投影儀;
-prominent ,/adj./@杰出的;
+prominent ,/adj./@显要的;,/adj./@重要的;,/adj./@显著的;,/adj./@凸出的;,/adj./@著名的;,/adj./@傑出的;
 promising ,/adj./@有希望的;
 promotion ,/n./@促进;,/n./@提拔;,/n./@晋升;
 pronounce ,/v./@發音;,/v./@宣布;
