--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -380,6 +380,7 @@ lengendary ,/adj./@传奇般的;
 lieutenant ,/n./@中尉;,/n./@陆军中尉;,/n./@海军上尉;
 likelihood ,/n./@可能;,/n./@相似性;
 linguistic ,/adj./@語言的;,/adj./@語言學的;
+locomotive ,/n./@火车头;,/n./@機車;,/adj./@運動的;,/adj./@有運動能力的;
 loneliness ,/n./@寂寞;
 mackintosh ,/n./@雨衣;
 magistrate ,/n./@地方执法官;
