--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -185,7 +185,7 @@ impertinent ,/adj./@不適當的;,/adj./@無理的;
 implication ,/n./@含义;,/n./@暗示;
 improvement ,/n./@改善;
 incantation ,/n./@咒语;,/n./@念咒;
-incarcerate ,/v./@監禁;
+incarcerate ,/v./@監禁;,/vt./@关押;,/vt./@囚禁;
 incarnation ,/n./@化身;
 inclination ,/n./@傾向;,/n./@愛好;,/n./@傾斜;,/n./@斜坡;
 incongruous ,/adj./@不一致的;,/adj./@不協調的;,/adj./@不和諧的;
