--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -106,6 +106,7 @@ busy ,/adj./@忙碌的;
 butt ,/n./@根端;,/v./@頂撞;
 cafe ,/n./@咖啡館;
 cake ,/n./@蛋糕;
+calf ,/n./@牛犊;,/n./@幼兽;,/n./@小牛皮;,/n./@腿肚子;,/n./@腓;,/n./@浮冰;
 call ,/v./@叫;,/v./@打電話;
 calm ,/adj./@冷靜的;
 camp ,/n./@帳篷;,/n./@營地;
