--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -1238,7 +1238,7 @@ vigor ,/n./@精力;
 villa ,/n./@別墅;
 viper ,/n./@毒蛇;
 virus ,/n./@病毒;
-vital ,/adj./@重要的;
+vital ,/adj./@重要的;,/adj./@必不可少的;,/adj./@必要的;,/adj./@决定性的;,/adj./@至关重要的;,/adj./@生气勃勃的;,/adj./@充满生机的;
 vivid ,/adj./@生動的;
 vocal ,/adj./@嗓音的;
 vogue ,/n./@流行;,/n./@時尚;
