--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -911,7 +911,7 @@ parity ,/n./@同等;,/n./@相等;,/n./@平價;
 parlay ,/v./(使)@增値;
 parley ,/v./@談判;,/v./@會談;
 parlor ,/n./@客廳;
-parole ,/n./@誓言;,/n./@假釋;
+parole ,/n./@誓言;,/n./@假釋;,/vt./@假释;
 parrot ,/n./@鸚鵡;
 partly ,/adv./@部分地;
 passby ,/v./@旁路;,/v./@經過;
@@ -982,7 +982,7 @@ prison ,/n./@監獄;
 profit ,/n./@利潤;,/v./@獲利;
 prompt ,/v./@敏捷的;,/v./@促進;,/v./@提示;,/adj./@准時的;
 pronto ,/adj./@立卽的;
-propel ,/v./@推進;,/v./@推動;
+propel ,/v./@推進;,/v./@推動;,/vt./@驱使;
 proper ,/adj./@適合的;
 pseudo ,/adj./@假的;,/adj./@冒充的;,/n./@偽君子;
 psyche ,/n./@靈魂;,/n./@心智;
