--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -807,7 +807,7 @@ organic ,/adj./@有機的;
 ossuary ,/n./@藏屍堂;
 outcome ,/n./@結果;
 outdoor ,/adj./@室外的;,/adj./@野外的;,/adj./@露天的;
-outline ,/n./@大綱;
+outline ,/n./@大綱;,/n./@轮廓;,/n./@略图;
 outlook ,/n./@觀點;,/n./@展望;,/n./@前景;
 outpost ,/n./@前哨;,/n./@边远居民点;
 outrage ,/n./@激怒;
@@ -1020,6 +1020,7 @@ rivulet ,/n./@小溪;
 roaming ,/v./@漫步;
 robbery ,/n./@搶劫;
 romance ,/n./@浪漫;
+routine ,/n./@常规;,/n./@例行程序;,/adj./@例行的;,/adj./@常规的;,/adj./@平淡的;,/adj./@乏味的;
 royalty ,/n./@王室;,/n./@版稅;,/n./@王權;,/n./@專利稅;
 rubbish ,/n./@垃圾;
 sabbath ,/n./@安息日;
