--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -26,7 +26,7 @@ afternoon ,/n./@下午;
 afterward ,/adv./@後來;,/adv./@之後;
 aggravate ,/v./@加重;,/v./@惡化;
 aggregate ,/v./@集合;
-agitation ,/n./@鼓动;
+agitation ,/n./@鼓动;,/n./@搅动;,/n./@焦虑;,/n./@不安;
 agreeable ,/adj./@惬意的;,/adj./@舒适的;,/adj./@易相处的;
 aimlessly ,/adv./@无目的地;
 albatross ,/n./@信天翁;,/n./@沉重負擔;
