--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -167,6 +167,7 @@ bottle ,/n./@瓶子;
 bottom ,/n./@底部;
 bought ,/v./@買;
 bounce ,/v./@彈起;,/n./@跳躍;
+bovine ,/adj./@牛的;,/adj./@愚笨的;
 branch ,/n./@分支;
 breach ,/n./@違反;,/n./@違背;,/n./@缺口;,/vt./@違反;,/vt./@破壞;,/vt./@打破;
 breast ,/n./@乳房;,/n./@胸部;
