--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -52,6 +52,7 @@ anchor ,/n./@錨;,/v./@固定;
 anemic ,/adj./@無活力的;
 animal ,/n./@動物;
 animus ,/n./@敵意;
+anneal ,/vt./@退火;
 annual ,/adj./@每年的;
 answer ,/v.//n./@回答;
 anthem ,/n./@頌歌;,/n./@聖歌;,/n./@贊美詩;,/n./@贊美歌;
