--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -28,7 +28,7 @@ against ,/v./@反對;
 agility ,/n./@敏捷;,/n./@靈活;
 agitate ,/v./@煽動;
 agonize ,/v./@痛苦;
-ailment ,/n./@疾病;
+ailment ,/n./@疾病;,/n./@小病;
 aimless ,/adj./@无目的的;
 airport ,/n./@飛機場;
 airship ,/n./@氣艇;
