--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -74,7 +74,7 @@ considerate ,/adj./@體貼的;,/adj./@體諒的;,/adj./@考慮周全的;
 consistency ,/n./@连贯性;
 consolation ,/n./@安慰;
 consolidate ,/v./@巩固;,/v./@团结;,/v./@统一;
-conspicuous ,/adj./@显著的;
+conspicuous ,/adj./@显著的;,/adj./@显眼的;,/adj./@引人注目的;
 constituent ,/adj./@组成的;,/n./@成分;
 constructor ,/n./@构造器;,/n./@建造者;
 contaminate ,/v./@污染;
@@ -235,6 +235,7 @@ meaningless ,/adj./@无意义的;
 measurement ,/n./@测量;,/n./@度量;
 merchandise ,/n./@商品;,/n./@貨物;
 metaphysics ,/n./@形而上学;
+methodology ,/n./@方法論;
 mindfulness ,/n./@留心;,/n./@察覺;
 multinomial ,/n./@多項式;,/adj./@多項的;
 nationality ,/n./@国籍;
