--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -183,6 +183,7 @@ surprisingly ,/adv./@令人惊讶的;
 surroundings ,/n./@周遭;
 surveillance ,/n./@监视;
 suspiciously ,/adv./@怀疑地;
+transcendent ,/adj./@超常的;,/adj./@傑出的;,/adj./@超然的;,/adj./@卓越的;,/adj./@超越一切的;
 translucence ,/n./@半透明;
 translucency ,/n./@半透明;
 transparency ,/n./@透明度;,/n./@透明性;
