--- a/Files/lang/ch/chinese14.csv
+++ b/Files/lang/ch/chinese14.csv
@@ -14,6 +14,7 @@ infrastructure ,/n./@基础设施;
 initialization ,/n./@初始化;
 interpretation ,/n./@翻譯;,/n./@解釋;,/n./@口譯;
 interpupillary ,/adj./@瞳孔间的;
+methodological ,/adj./@方法論的;
 multiplication ,/n./@乘法;,/n./@增加;
 pharmaceutical ,/adj./@制药的;,/adj./@制药学的;
 philanthropist ,/n./@慈善家;,/n./@博愛主義者;
