--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -90,6 +90,7 @@ boss ,/n./@老板;
 both ,/adv./@兩者都;,/conj./@既;,/adj./@兩個的;
 bowl ,/n./@碗;
 brew ,/v./@釀造;,/n./@釀造;
+brig ,/n./@禁閉室;,/n./@横帆双桅船;
 brim ,/n./@邊緣;,/n./@邊;
 brow ,/n./@眉毛;,/n./@額;,/n./@山脊;,/n./@额头;
 buck ,/n./@錢;,/n./@雄鹿;
@@ -450,7 +451,7 @@ huge ,/adj./@大的;
 hunt ,/v./@捕獵;
 hurl ,/v./@猛投;,/v./@猛擲;,/v./@丟下;
 hurt ,/v./@傷害;
-hype ,/v./@大肆宣傳;
+hype ,/v./@大肆宣傳;,/n./@不实宣传;,/n./@宣传骗局;,/vt./@夸张地宣传;
 i've ,/v./@我已;
 icon ,/n./@圖標;
 idea ,/n./@想法;
@@ -896,7 +897,7 @@ sofa ,/n./@沙发;,/n./@軟椅;
 soft ,/adj./@軟的;
 soil ,/n./@土壤;
 sold ,/v./@賣;
-sole ,/adj./@唯一的;,/n./@鞋底;
+sole ,/adj./@唯一的;,/n./@鞋底;,/n./@脚掌;
 some ,/adj./@一些;
 song ,/n./@歌;
 soon ,/adv./@快;,/adv./@不就;
