--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -361,6 +361,7 @@ eagle ,/n./@鷹;
 early ,/adj./@早的;,/adj./@提前的;
 earth ,/n./@地球;
 edict ,/n./@詔書;
+eigen ,/adj./@特征的;,/adj./@本征的;,/adj./@自身的;,/adj./@独特的;
 eight ,/n./@八;
 eject ,/v./@噴射;
 elate ,/v./@取悅;,/adj./@得意的;
