--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -78,6 +78,7 @@ arouse ,/v./@喚醒;,/v./@喚起;,/v./@激發;,/v./@引起;,/v./@鼓勵;
 arrear ,/n./@欠款;
 arrest ,/v./@逮捕;
 arrive ,/vi./@到达;,/vi./@达成;,/vi./@来临;,/vi./@得出;,/vi./@到场;
+artful ,/adj./@狡猾的;,/adj./@巧妙的;
 artist ,/n./@藝術家;
 ascend ,/v./@上升;,/v./@攀升;
 ascent ,/n./@上升;
@@ -143,6 +144,7 @@ behold ,/v./@看;,/v./@註視;,/v./@瞧;
 belief ,/n./@信仰;
 bellow ,/v./@吼叫;
 belong ,/v./@屬于;
+benign ,/adj./@和善的;,/adj./@有益的;,/adj./@良性的;,/adj./@宜人的;
 berate ,/v./@斥責;,/v./@訓斥;
 bestow ,/v./@給予;,/v./@授予;
 betray ,/v./@背叛;,/v./@出賣;
@@ -950,6 +952,7 @@ pirate ,/n./@海盜;
 pistol ,/n./@手槍;
 plague ,/n./@瘟疫;,/v./@折磨;
 planet ,/n./@星球;,/n./@行星;
+plasma ,/n./@血漿;,/n./@等离子体;
 please ,/v./@請;
 pledge ,/v./@保證;,/v./@发誓;
 plenty ,/adj./@大量的;
@@ -1118,6 +1121,7 @@ saline ,/adj./@鹽的;,/adj./@含鹽的;,/n./@鹽水;
 saliva ,/n./@唾液;
 sallow ,/adj./@灰黃的;
 sample ,/n./@樣品;
+sandal ,/n./@凉鞋;
 satire ,/n./@諷刺;,/n./@譏諷;
 saturn ,/n./@農神;,/n./@土星;
 saucer ,/n./@茶碟;
