--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -43,7 +43,7 @@ amazing ,/adj./@令人驚訝的;
 ambient ,/adj./@周圍的;,/adj./@外界的;,/adj./@環繞的;
 amenity ,/n./@舒適;,/n./@和諧;
 America ,/n./@美國;
-amiable ,/adj./@和藹的;,/adj./@亲切的;
+amiable ,/adj./@和藹的;,/adj./@亲切的;,/adj./@亲切友好的;
 amnesty ,/n./@大赦;
 amongst ,/prep./@在之中;
 amplify ,/v./@放大;,/v./@详述;
@@ -132,6 +132,7 @@ billion ,/n./@十億;
 biology ,/n./@生物學;
 biscuit ,/n./@餅干;
 bizarre ,/adj./@奇異的;
+bladder ,/n./@膀胱;
 blanket ,/n./@地毯;
 blatant ,/adj./@明显的;,/adj./@公然的;,/adj./@露骨的;
 blemish ,/n./@瑕疵;
@@ -238,7 +239,7 @@ command ,/v./@命令;
 commend ,/v./@推薦;,/v./@稱贊;
 comment ,/v./@評論;,/n./@评论;
 commune ,/v./@談心;,/v./@密切交流;,/n./@公社;
-commute ,/vi./@通勤;,/vt./@减轻;,/n./@上下班路程;
+commute ,/vi./@通勤;,/vt./@减轻;,/n./@上下班路程;,/vt./@變換;,/vt./@改變;
 compact ,/n./@合同;,/n./@契约;,/adj./@紧凑的;,/adj./@紧密的;,/adj./@简洁的;
 company ,/n./@公司;
 compare ,/v./@比較;
@@ -449,7 +450,7 @@ epicure ,/n./@美食家;,/n./@老饕;,/n./@享樂主義者;,/adj./@美食的;
 epigram ,/n./@警句;
 episode ,/n./@集;,/n./@插曲;,/n./@情節;
 epitaph ,/n./@墓志銘;
-erasure ,/v./@消除;
+erasure ,/n./@消除;,/n./@擦除;,/n./@清除;
 erosion ,/n./@腐蝕;
 espouse ,/v./@支持;,/v./@嫁;,/v./@娶;,/v./@贊成;,/v./@信奉;
 esquire ,/n./@君子;
@@ -548,7 +549,7 @@ gelatin ,/n./@明膠;,/n./@動物膠;,/n./@膠製品;
 general ,/adj./@普通的;,/adj./@大體的;,/adj./@一般的;,/adj./@綜合的;
 generic ,/adj./@類的;,/adj./@一般的;,/adj./@屬的;
 genetic ,/adj./@遺傳的;,/adj./@基因的;
-genital ,/adj./@生殖的;
+genital ,/adj./@生殖的;,/adj./@生殖器的;
 genteel ,/adj./@有教養的;,/adj./@文雅的;
 gentile ,/n./@異教徒;
 genuine ,/adj./@眞實的;
@@ -1256,7 +1257,7 @@ vehicle ,/n./@車輛;
 ventage ,/n./@漏口;
 venture ,/n./@冒險;,/n./@風險;,/v./@冒險;,/v./@投機;
 verbose ,/adj./@冗長的;,/adj./@囉嗦的;
-verdict ,/n./@結論;,/n./@裁定;
+verdict ,/n./@結論;,/n./@裁定;,/n./@裁决;,/n./@意見;,/n./@決定;
 version ,/n./@版本;
 vertigo ,/n./@眩暈;
 vestige ,/n./@遺迹;,/n./@残迹;,/n./@丝毫;,/n./@残余;
@@ -1268,7 +1269,7 @@ victory ,/n./@勝利;
 village ,/n./@村莊;
 villain ,/n./@壞人;,/n./@罪犯;,/n./@反派;
 vinegar ,/n./@醋;
-vintage ,/v./@采葡萄;,/v./@釀葡萄酒;
+vintage ,/v./@采葡萄;,/v./@釀葡萄酒;,/adj./@极佳年份酿造的;,/adj./@经典的;,/adj./@古老的;,/adj./@老式的;
 violate ,/v./@違反;,/v./@褻瀆;,/v./@侵犯;
 violent ,/adj./@暴力的;
 virgina ,/n./@陰道;
