--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -47,7 +47,7 @@ altitude ,/n./@高度;
 altruism ,/n./@利他主義;
 ambition ,/n./@野心;,/n./@抱负;
 ambulant ,/adj./@流动的;,/adj./@走动的;
-amenable ,/adj./@順從的;
+amenable ,/adj./@順從的;,/adj./@服从的;
 American ,/n./@美国人;
 amicable ,/adj./@友善的;
 amphibia ,/n./@兩棲類;
@@ -287,6 +287,7 @@ delusion ,/n./@迷惑;,/n./@错觉;
 delusive ,/adj./@迷惑性的;
 democrat ,/n./@民主党人;
 demolish ,/v./@拆除;,/v./@破壞;,/v./@爆破;,/v./@毀壞;
+derelict ,/adj./@破败的;,/adj./@荒废的;
 describe ,/v./@描述;
 deserter ,/n./@逃兵;,/n./@背棄者;
 designer ,/n./@设计师;
@@ -676,6 +677,7 @@ muscular ,/adj./@肌肉的;,/adj./@肌肉发达的;
 musician ,/n./@音乐家;
 mustache ,/n./@胡子;,/n./@髭;
 mutilate ,/v./@切斷;,/v./@毀傷;,/v./@殘害;
+narcotic ,/n./@致幻毒品;,/n./@催眠藥;,/n./@麻醉劑;,/adj./@麻醉的;
 national ,/adj./@国家的;,/adj./@民族的;
 nativity ,/n./@耶稣的诞生;
 nautical ,/adj./@航海的;
@@ -697,6 +699,7 @@ nowadays ,/adv./@如今;,/adv./@目前;
 nuisance ,/n./@讨厌的东西;
 numerous ,/adj./@大量的;
 nutrient ,/n./@營養物;,/n./@營養成分;,/adj./@營養的;
+obedient ,/adj./@服從的;,/adj./@順從的;,/adj./@聽話的;
 obituary ,/n./@誧告;
 oblivion ,/n./@遗忘;,/n./@湮灭;,/n./@赦免;
 observer ,/n./@觀察員;
@@ -778,6 +781,7 @@ perverse ,/adj./@不当的;,/adj./@有悖的;,/adj./@违反常理的;,/adj./@乖
 petition ,/n./@請願;
 petulant ,/adj./@暴躁的;,/adj./@任性的;
 pharmacy ,/n./@藥房;,/n./@藥劑學;,/n./@製藥學;,/n./@製藥業;,/n./@配藥學;
+physique ,/n./@體格;,/n./@體形;
 platform ,/n./@平台;
 pleasant ,/adj./@令人愉快的;
 pleasure ,/n./@快乐;
