--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -57,6 +57,7 @@ animation ,/n./@动画;,/n./@活力;,/n./@生機;
 annotated ,/adj./@有註釋的;
 anomalous ,/adj./@不普通的;
 anonymous ,/adj./@匿名的;
+anthology ,/n./@選集;,/n./@集粹;,/n./@精選集;
 antiquate ,/adj./@废弃;,/adj./@过时;
 antiquity ,/n./@古代;,/n./@古迹;,/n./@古物;,/n./@古老;
 apartment ,/n./@公寓;
@@ -343,6 +344,8 @@ espionage ,/n./@間諜;,/n./@間諜活動;
 essential ,/adj./@重要的;
 establish ,/v./@建立;,/v./@确立;
 etiquette ,/n./@禮節;,/n./@礼仪;,/n./@规矩;
+etymology ,/n./@词源;,/n./@词源学;
+euthanize ,/vt./@安乐死;
 evaporate ,/v./@蒸發;,/v./@脫水;,/v./@消失;
 evolution ,/n./@進化;,/n./@發展;
 Excalibur ,/n./@神劍;,/n./@聖劍;
@@ -548,7 +551,9 @@ menstrual ,/adj./@月经的;
 mesmerize ,/v./@吸引;
 metabolic ,/adj./@变化的;,/adj./@新陈代谢的;
 meteorite ,/n./@隕石;
-methodist ,/n./@衛理公會教徒;
+methodism ,/n./@衛理宗教義;,/n./@循道宗教義;
+methodist ,/n./@衛理公會教徒;,/n./@循道宗教徒;
+metrology ,/n./@度量衡學;,/n./@計量學;
 microwave ,/n./@微波;
 millipede ,/n./@千足虫;,/n./@马陆;
 miniature ,/n./@微缩模型;,/adj./@小型的;
@@ -632,6 +637,7 @@ pessimism ,/n./@悲观;
 petroleum ,/n./@石油;
 petulance ,/n./@易怒;,/n./@暴躁;
 pharaonic ,/adj./@法老的;,/adj./@法老時代的;
+pheromone ,/n./@信息素;
 phonetics ,/n./@語音學;
 physician ,/n./@内科醫生;
 phytology ,/n./@植物学;
@@ -856,6 +862,7 @@ treatment ,/n./@治療;,/n./@待遇;
 trembling ,/adj./@发抖的;
 turbulent ,/adj./@动荡的;
 umbilical ,/adj./@脐带的;
+unanimous ,/adj./@一致的;,/adj./@意见一致的;,/adj./@一致通過的;
 underline ,/v./@强调;
 undermine ,/v./@暗中破坏;
 undertake ,/v./@從事;,/v./@承擔;
@@ -870,6 +877,7 @@ uppermost ,/adj./@至高的;,/adj./@至高地;
 utterance ,/n./@话语;
 uttermost ,/n./@極度;,/adj./@極端;
 vaccinate ,/v./@注射疫苗;
+vandalize ,/vt./@蓄意破坏;,/vt./@故意破壞;
 vegetable ,/n./@蔬菜;,/n./@植物;,/adj./@蔬菜的;,/adj./@植物的;
 vehemence ,/n./@熱情;
 vengeance ,/n./@报复;,/n./@复仇;
