--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -77,6 +77,7 @@ autocratic
 automobile
 autonomous
 background
+banishment
 basketball
 battleship
 beforehand
@@ -171,6 +172,7 @@ continuity
 continuous
 contraband
 contradict
+contravene
 contribute
 controller
 convenient
@@ -295,6 +297,7 @@ frequently
 friendship
 frustrated
 functional
+futuristic
 generation
 girlfriend
 glamourous
@@ -480,6 +483,7 @@ programmer
 projection
 propaganda
 proportion
+proprietor
 prosecutor
 prosperity
 prosperous
