--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -78,6 +78,7 @@ arouse
 arrear
 arrest
 arrive
+artful
 artist
 ascend
 ascent
@@ -143,6 +144,7 @@ behold
 belief
 bellow
 belong
+benign
 berate
 bestow
 betray
@@ -950,6 +952,7 @@ pirate
 pistol
 plague
 planet
+plasma
 please
 pledge
 plenty
@@ -1118,6 +1121,7 @@ saline
 saliva
 sallow
 sample
+sandal
 satire
 saturn
 saucer
