--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -287,6 +287,7 @@ delusion
 delusive
 democrat
 demolish
+derelict
 describe
 deserter
 designer
@@ -676,6 +677,7 @@ muscular
 musician
 mustache
 mutilate
+narcotic
 national
 nativity
 nautical
@@ -697,6 +699,7 @@ nowadays
 nuisance
 numerous
 nutrient
+obedient
 obituary
 oblivion
 observer
@@ -778,6 +781,7 @@ perverse
 petition
 petulant
 pharmacy
+physique
 platform
 pleasant
 pleasure
