--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -57,6 +57,7 @@ animation
 annotated
 anomalous
 anonymous
+anthology
 antiquate
 antiquity
 apartment
@@ -343,6 +344,8 @@ espionage
 essential
 establish
 etiquette
+etymology
+euthanize
 evaporate
 evolution
 Excalibur
@@ -548,7 +551,9 @@ menstrual
 mesmerize
 metabolic
 meteorite
+methodism
 methodist
+metrology
 microwave
 millipede
 miniature
@@ -632,6 +637,7 @@ pessimism
 petroleum
 petulance
 pharaonic
+pheromone
 phonetics
 physician
 phytology
@@ -856,6 +862,7 @@ treatment
 trembling
 turbulent
 umbilical
+unanimous
 underline
 undermine
 undertake
@@ -870,6 +877,7 @@ uppermost
 utterance
 uttermost
 vaccinate
+vandalize
 vegetable
 vehemence
 vengeance
